packages/kyvernoPolicies/chart/tests/vpol/restrict-sysctls-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-disallowed-sysctl
spec:
  securityContext:
    sysctls:
      - name: net.core.somaxconn
        value: "1024"
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-mixed-sysctls
spec:
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_syncookies
        value: "1"
      - name: kernel.msgmax
        value: "65536"
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-sysctls
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-allowed-sysctl
spec:
  securityContext:
    sysctls:
      - name: net.ipv4.tcp_syncookies
        value: "1"
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-multiple-allowed
spec:
  securityContext:
    sysctls:
      - name: kernel.shm_rmid_forced
        value: "1"
      - name: net.ipv4.ip_local_port_range
        value: "1024 65535"
      - name: net.ipv4.tcp_keepalive_time
        value: "7200"
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-disallowed-sysctl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        sysctls:
          - name: net.core.somaxconn
            value: "1024"
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-allowed-sysctl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.tcp_syncookies
            value: "1"
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal
